--- a/Documents/bp_sirljan_2012/reference.bib
+++ b/Documents/bp_sirljan_2012/reference.bib
@@ -12,6 +12,45 @@
   note   = "\\ \verb|phpgacl.sourceforge.net/manual.pdf|, stav z 15.\,5.\,2012",
 }
 
+@ONLINE{wiki:acl,
+  author = "{Přispěvatelé Wikipedie}",
+  title = "Access control list",
+  cited = "16.\,5.\,2012",
+  year =         2012,
+  url = "http://cs.wikipedia.org/wiki/Access_control_list"
+}
+
+@ONLINE{wiki:Ruby,
+  author = "{Přispěvatelé Wikipedie}",
+  title = "Ruby (programovací jazyk)",
+  cited = "16.\,5.\,2012",
+  year =         2012,
+  url = {"http://cs.wikipedia.org/wiki/Ruby_(programovac\%C3\%AD_jazyk)"}
+}
+
+@ONLINE{github:acl9,
+  author = "{Oleg Dashevskii}",
+  title = "acl9",
+  cited = "16.\,5.\,2012",
+  year =         2012,
+  url = "https://github.com/be9/acl9"
+}
+
+@ONLINE{github:iq-acl,
+  author = "{Jamie Hill, SonicIQ Ltd.}",
+  title = "iq-acl",
+  cited = "16.\,5.\,2012",
+  year =         2012,
+  url = "https://github.com/soniciq/iq-acl"
+}
+
+@ONLINE{rubyforge:ActiveAclPlus,
+  author = "{Peter Schrammel, Gregor Melhorn}",
+  title = "Active Access Control Lists Plus (ActiveAclPlus)",
+  cited = "16.\,5.\,2012",
+  year =         2012,
+  url = "http://activeaclplus.rubyforge.org/"
+
 @Book{UML,
   author =      "Martin Fowler",
   title =        "Destilované UML",
@@ -29,3 +68,4 @@
   year   = 2010,
   note =	"In Czech",
 }
+
